<resources>

    <string name="app_name">CRM</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- front page string -->
    <string name="front_page_warranty_desc">保修记录</string>
    <string name="front_page_software_desc">软件升级</string>
    <string name="front_page_shop_desc">门店查询</string>
    <string name="front_page_hotmodel_desc">热销机型</string>
    <string name="front_page_topfree_desc">特惠机型</string>
    <string name="front_page_personalcenter_desc">个人中心</string>
    <string name="banner_title">客户服务</string>
    <string name="search_confirm_txt">Go</string>
    <string name="search_hint">搜索</string>

    <!-- warrantly string -->
    <string name="product_evaluate_btn_text">评价</string>
    <string name="product_warrantly_nonactived_tip_txt">您的质保卡尚未激活</string>
    <string name="product_warrantly_nonactived_secondary_tip_txt">请点击按钮马上激活\n激活后将享受到{?}\n为您提供的尊贵质保服务</string>
    <string name="product_active_txt">马上激活</string>
    <string name="product_warrantly_active_ongoing_tip">正在激活。。。</string>
    <string name="product_warrantly_active_result_tip">恭喜您，您的质保卡已激活，可享受{?1}提供的尊贵质保服务{?2}天</string>
    <string name="product_warrantly_active_exit_txt">关闭</string>
    <string name="product_warrantly_actived_purchase_date_txt">您的购机时间：{?}</string>
    <string name="product_warrantly_actived_expire_date_txt">您的保修到期时间：{?}</string>
    <string name="product_warrantly_actived_effective_time_left_txt">您还有{?}天免费保修服务</string>
    <string name="product_warrantly_actived_guarantee_tip_txt">您的保修记录</string>
    <string name="product_act_warranty_fail_toast">激活失败，请稍后再试</string>
    <string name="product_warranty_no_info">没有查询到您的质保信息</string>

    <!-- evaluate string -->
    <string name="evaluate_title_txt">评价</string>
    <string name="evaluate_welcome_tip_txt">您好！欢迎您的评论！</string>
    <string name="evaluate_total_grade_tip_txt">总体评价：</string>
    <string name="evaluate_grade_tip_txt">请评分：</string>
    <string name="evaluate_content_tip_txt">评价内容：</string>
    <string name="evaluate_post_txt">提交评价</string>
    <string name="evaluate_posting_txt">正在提交评价。。。</string>
    <string name="evaluate_success_txt">恭喜，您已评价成功！</string>
    <string name="evaluate_incomplete_data_toast">尚未评分或无评价内容</string>
    <string name="evaluate_post_fail_toast">提交评论失败，请稍后再试</string>

    <!-- software string -->
    <string name="software_download">下载</string>
    <string name="software_installed">已安装</string>
    <string name="software_update">可更新</string>

    <!-- notification string -->
    <string name="total_noti_title">正在下载</string>
    <string name="total_noti_txt">您有{?}个任务正在进行中</string>
    <string name="percent">({?}%)</string>
    <string name="total_noti_ticker">您添加了新的下载任务</string>
    <string name="apk_noti_title">下载完成</string>
    <string name="apk_noti_txt">{?}下载已完成，请安装</string>
    <string name="apk_noti_ticker">{?}下载已完成</string>
    <string name="apk_download_fail_toast">下载应用（{?}）失败</string>
    <string name="new_msg_noti_title">来自CRM的新消息</string>
    <string name="new_msg_noti_content">您总共有{?}条未读新消息</string>
    <string name="new_msg_noti_ticker">您有新的消息，请查收</string>

    <!-- order string -->
    <string name="order_title_txt">订单列表</string>
    <string name="order_number_txt">订单编号：{?}</string>
    <string name="order_price_tip_txt">实付：</string>
    <string name="order_price_txt">{?}元</string>
    <string name="order_count_tip_txt">数量：</string>
    <string name="order_view_detail_txt">查看订单</string>
    <string name="order_no_item_txt">您还没有下过订单</string>
    <string name="order_cancel_txt">取消订单</string>
    <string name="order_cancel_dlg_ongoing_txt">正在取消订单。。。</string>
    <string name="order_cancel_success_toast">成功取消订单</string>
    <string name="order_cancel_fail_toast">取消失败，请稍后再试</string>

    <!-- order detail string -->
    <string name="order_detail_title_txt">订单详情</string>
    <string name="order_detail_number">订单编号：{?}</string>
    <string name="order_detail_status">订单状态：{?}</string>
    <string name="order_detail_amount">订单金额：￥{?}元</string>
    <string name="order_detail_msg">用户留言：{?}</string>
    <!-- product item string -->
    <string name="order_detail_color">机身颜色：{?}</string>
    <string name="order_detail_count">数量：{?}</string>
    <string name="order_detail_price">单价：￥{?1}元*{?2}</string>
    <string name="order_detail_anchor">下单时间：{?}</string>
    <!-- address info string -->
    <string name="order_address_tip_txt">收货地址信息</string>
    <string name="order_detail_address">收货地址：{?}</string>
    <string name="order_detail_name">收货人：{?}</string>
    <string name="order_detail_phone">电话：{?}</string>
    <string name="order_detail_postcode">邮编：{?}</string>
    <string name="order_count_error_toast">请选择正确的购买数量</string>

    <!-- address string -->
    <string name="add_new_address">您还没有设置收货地址</string>
    <string name="add_new_address_btx_txt">添加新地址</string>
    <string name="province_txt">省</string>
    <string name="city_txt">市</string>
    <string name="district_txt">区</string>
    <string name="address_info_title_new">添加地址</string>
    <string name="address_info_title_edit">编辑地址</string>
    <string name="address_info_title_detail">地址详情</string>
    <string name="name_tip">　*联系人：</string>
    <string name="phone_tip">*联系电话：</string>
    <string name="area_tip">*所在地区：</string>
    <string name="detail_tip">*详细地址：</string>
    <string name="postcode_tip">　　*邮编：</string>
    <string name="btn_save_txt">保存设置</string>
    <string name="btn_edit_txt">编辑地址</string>
    <string name="btn_delete_txt">删除地址</string>
    <string name="address_select_title_txt">选择地址</string>
    <string name="area_choose_title_txt">选择您所在区域</string>
    <string name="set_default_txt">设为默认</string>
    <string name="save_txt">保存</string>
    <string name="delete_txt">删除</string>
    <string name="wrong_detail_toast_txt">请输入正确的详细地址</string>
    <string name="wrong_name_toast_txt">请输入正确的收件人姓名</string>
    <string name="wrong_phone_toast_txt">请输入正确的联系电话</string>
    <string name="wrong_postcode_toast_txt">请输入正确的邮编</string>
    <string name="set_default_dlg_tip">设为默认地址。。。</string>
    <string name="save_change_dlg_tip">正在保存。。。</string>
    <string name="delete_dlg_tip">正在删除。。。</string>
    <string name="set_default_fail_toast">设置默认失败</string>
    <string name="save_change_fail_toast">保存失败</string>
    <string name="delete_fail_toast">删除失败</string>

    <!-- hot model string -->
    <string name="detail_btn_txt">详情</string>
    <string name="query_btn_txt">询价</string>
    <string name="product_sold_txt">已售：{?}台</string>
    <string name="product_comments_txt">评价：{?}条</string>

    <!-- purchase confirm string -->
    <string name="purchase_confirm_title_txt">确认订单</string>
    <string name="purchase_confirm_workflow_tip_txt">购机流程：</string>
    <string name="transport_no_charge">免运费</string>
    <string name="post_order_txt">提交订单</string>
    <string name="purchase_item_price_txt">{?}元*{?1}</string>
    <string name="purchase_count_txt">{?}件</string>
    <string name="purchase_color_txt">{?}</string>
    <string name="purchase_comment_txt">可以写您对我们商品或服务的特殊要求，如：派送时间等</string>
    <string name="post_order_ongoing_txt">正在提交订单。。。</string>
    <string name="post_order_success_txt">订单提交成功，查看您的订单列表？</string>
    <string name="post_order_fail_toast">提交订单失败</string>
    <string name="post_order_success_view_txt">查看列表</string>
    <string name="dlg_msg_leave_title_txt">给我们留言：</string>
    <string name="no_address_exist">请先填写收货地址！</string>
    <string name="dlg_msg_add_addr_title_txt">请先添加收货地址</string>

    <!-- city string -->
    <string name="city_title_txt">选择城市</string>
    <string name="auto_position_ongoing">正在定位，请稍后。。。</string>
    <string name="locate_dlg_title">定位结果</string>
    <string name="locate_dlg_msg">您当前所处城市为：%s</string>

    <!-- shop string -->
    <string name="routing">获取路线</string>
    <string name="map_op_distance_tip">您当前位置距离最近门店</string>
    <string name="unit_meter">米</string>
    <string name="routeing_drive_tip">自驾线路</string>
    <string name="routeing_bus_tip">公交线路</string>
    <string name="routeing_walk_tip">步行线路</string>
    <string name="get_driving_route_failed">获取自驾路线失败</string>
    <string name="get_transit_route_failed">获取公交路线失败</string>
    <string name="get_walking_route_failed">获取步行路线失败</string>
    <string name="selected_shop_title_txt">店名：{?}</string>
    <string name="selected_shop_address_txt">地址：{?}</string>
    <string name="selected_shop_telephone_txt">联系电话：{?}</string>

    <!-- product detail string -->
    <string name="product_detail_title_txt">商品详情</string>
    <string name="product_detail_no_item">该产品暂时没有提供更进一步的详情介绍</string>
    <string name="product_color_tip_txt">机身颜色：</string>
    <string name="product_purchase_tip_txt">购买数量：</string>
    <string name="product_purchase_default_count">1</string>
    <string name="product_sock_txt">件，（库存{?}件）</string>
    <string name="product_price_query_txt">询价</string>
    <string name="product_purchase_txt">立即购买</string>
    <string name="purchase_workflow_tip_txt">购机流程：</string>
    <string name="price_query_tip_txt">正在询价。。。</string>
    <string name="price_query_result_tip_txt">您的私人尊享包邮价为：{?}元\n（本价仅供参考，最终成交价以实际订单显示价格为准）</string>
    <string name="product_comment_tip_txt">{?}条</string>
    <string name="product_price_query_fail_toast">暂时无法查到价格，请稍后再试</string>
    <!-- more string -->
    <string name="more_tip_txt">查看更多</string>
    <string name="more_loading_tip_txt">正在加载。。。</string>
    <string name="more_fail_tip_txt">加载失败，请重试</string>
    <!-- product parameter string -->
    <string name="product_param_title_txt">规格参数</string>
    <string name="product_param_no_item">该产品暂时没有提供详细参数</string>

    <!-- product comment string -->
    <string name="product_comment_title_txt">评价详情</string>
    <string name="product_comment_txt">我要评价</string>
    <!-- other -->
    <string name="invalid_network">网络连接出错，请稍后重试</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="msg_no_item_txt">您尚未收到任何消息</string>

    <!-- floating ad string -->
    <string name="tips">提示</string>
    <string name="floating_ad_download_tip_txt">确定要下载{?}吗？</string>
    <string name="floating_ad_download_ongoing_toast">有任务正在下载中，稍后再试</string>
    <string name="floating_ad_download_begin_tip_txt">开始下载:</string>

</resources>