<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/area_edit_layout"
    android:layout_width="match_parent"
    android:layout_height="48dip"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dip" >

    <TextView
        android:id="@+id/area_edit_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_tip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/province_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/city"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/district"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/district_txt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>