<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/op_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:id="@+id/op_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/address_edit_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="0.1"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/btn_edit_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/address_delete_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="0.1"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/btn_delete_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/address_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:background="@drawable/btn_bg_selector"
        android:gravity="center"
        android:text="@string/btn_save_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</FrameLayout>