<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/warrantly_bottom_actived_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center" >

    <RelativeLayout
        android:id="@+id/warrantly_bottom_actived_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/warranty_active_1_bg"
        android:padding="5dip" >

        <TextView
            android:id="@+id/warrantly_bottom_actived_purchase_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product_warrantly_actived_purchase_date_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/warrantly_bottom_actived_expire_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/warrantly_bottom_actived_purchase_date"
            android:gravity="center"
            android:paddingTop="2dip"
            android:text="@string/product_warrantly_actived_expire_date_txt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/warrantly_bottom_actived_effective_time_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/warrantly_bottom_actived_expire_date"
            android:gravity="center"
            android:paddingTop="2dip"
            android:text="@string/product_warrantly_actived_effective_time_left_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange" />
    </RelativeLayout>

    <TextView
        android:id="@+id/warrantly_bottom_actived_guarantee_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warrantly_bottom_actived_top_layout"
        android:layout_centerVertical="true"
        android:background="@drawable/warranty_active_2_bg"
        android:gravity="center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/product_warrantly_actived_guarantee_tip_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/orange" />

    <com.doo360.crm.view.LinearLayoutForListView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warrantly_bottom_actived_guarantee_tip"
        android:orientation="vertical" >
    </com.doo360.crm.view.LinearLayoutForListView>

</RelativeLayout>