<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hotmodel_item_bg_selector"
    android:clickable="true"
    android:descendantFocusability="blocksDescendants"
    android:focusable="true"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="40dip"
        android:layout_height="68dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"
        android:background="@drawable/hotmodel_icon_holder"
        android:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/op"
        android:layout_toRightOf="@id/item_icon"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:id="@+id/item_bref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingTop="3dip"
            android:text="bref"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/item_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_bref"
            android:singleLine="true"
            android:text="@string/product_sold_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/item_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_bref"
            android:layout_toRightOf="@id/item_sold"
            android:paddingLeft="5dip"
            android:singleLine="true"
            android:text="@string/product_comments_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RatingBar
            android:id="@+id/item_ratingbar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_bref"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/item_comments"
            android:isIndicator="true"
            android:rating="4"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="7dip"
        android:visibility="gone" >

        <TextView
            android:id="@+id/item_detail"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:layout_marginTop="3dip"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="3dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="3dip"
            android:text="@string/detail_btn_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/item_query"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:layout_below="@id/item_detail"
            android:layout_marginTop="3dip"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="3dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="3dip"
            android:text="@string/query_btn_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</RelativeLayout>