<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_window_bg" >

    <RelativeLayout
        android:id="@+id/popup_op_drive_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/popup_op_drive_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/routeing_driving_selector"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/popup_op_drive_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_op_drive_icon"
            android:paddingTop="5dip"
            android:text="@string/routeing_drive_tip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popup_op_bus_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/popup_op_bus_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/routeing_bus_selector"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/popup_op_bus_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_op_bus_icon"
            android:paddingTop="5dip"
            android:text="@string/routeing_bus_tip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popup_op_walk_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/popup_op_walk_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/routeing_walk_selector"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/popup_op_walk_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_op_walk_icon"
            android:paddingTop="5dip"
            android:text="@string/routeing_walk_tip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</LinearLayout>