<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:clickable="false"
    android:focusable="false"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:padding="5dip" >

    <TextView
        android:id="@+id/item_order_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:paddingLeft="10dip"
        android:text="ddd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/item_order_desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_order_number"
        android:background="@drawable/order_item_bg"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_holder_small"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_icon"
            android:text="ddd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:layout_toRightOf="@id/item_icon"
            android:text="@string/order_price_tip_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:layout_toRightOf="@id/item_price_tip"
            android:text="@string/order_price_txt" />

        <TextView
            android:id="@+id/item_count_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:layout_toLeftOf="@+id/item_count"
            android:text="@string/order_count_tip_txt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/item_name"
            android:paddingRight="5dip"
            android:text="11"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RelativeLayout
            android:id="@+id/item_below_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price_tip"
            android:layout_marginTop="5dip"
            android:background="@drawable/order_item_below_bg_selector"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <TextView
                android:id="@+id/item_view_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:paddingLeft="10dip"
                android:text="@string/order_view_detail_txt"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@drawable/order_text_bg_selector" />

            <ImageView
                android:id="@+id/item_view_detail_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:background="@drawable/order_view_detail_indicator"
                android:scaleType="centerCrop" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>