<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_grey" >

    <include layout="@layout/banner" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner_layout" >

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <TextView
                android:id="@+id/o_top_common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/order_detail_layout_bg_top"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dip"
                android:text="@string/order_detail_number"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <com.doo360.crm.view.LinearLayoutForListView
                android:id="@+id/middle_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/o_top_common"
                android:orientation="vertical" >
            </com.doo360.crm.view.LinearLayoutForListView>

            <TextView
                android:id="@+id/o_address_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/middle_layout"
                android:background="@drawable/order_detail_layout_bg_bottom"
                android:padding="5dip"
                android:singleLine="true"
                android:text="@string/order_address_tip_txt"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/o_bottom_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/o_address_tip"
                android:background="@drawable/order_detail_layout_bg_middle"
                android:lineSpacingMultiplier="1.2"
                android:padding="5dip"
                android:text="ddd"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dip"
        android:background="@drawable/personal_address_btn_bg_selector"
        android:gravity="center"
        android:paddingBottom="5dip"
        android:paddingLeft="25dip"
        android:paddingRight="25dip"
        android:paddingTop="5dip"
        android:text="@string/product_evaluate_btn_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/banner_layout"
        android:gravity="center" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/retry" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/loading" />
    </RelativeLayout>

</RelativeLayout>